--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="product">
         <img src="product1.jpg" alt="Product 1">
         <h2>Produit 1</h2>
-        <p>Description du produit 1</p>
+        <p>Stanislas je t'aime</p>
         <p class="price">Prix: 10€</p>
       </div>
       <div class="product">
